Fixed 4 image content block alignment https://trello.com/c/mncRckYK/238-alignment-of-sections-to-be-amended-especially-for-four-image-content-blocks-eg-school-work-family-carers-peers-in-possible-reas

--- a/site/src/sass/components/_content-block.scss
+++ b/site/src/sass/components/_content-block.scss
@@ -68,6 +68,10 @@
 	.content-block-sub-item {
 		width: 100%;
 
+		@media #{$medium-up}{
+			min-height: 261px;
+		}
+		
 		&__image{
 			width: 46%;
 			border-radius: 500px;
